# index-selector-cpp

./: .gitignore  CMakeLists.txt
app/: CMakeLists.txt
app/src/: main.cpp  random_problem.cpp  test.cpp
app/src/include/index-selector-app/: random_problem.hpp  test.hpp  test_utils.hpp
lib/: CMakeLists.txt
lib/include/index-selector/: immutable_array.hpp  index.hpp  options.hpp  problem.hpp  solution.hpp  solve.hpp  types.hpp
lib/src/: cuts.cpp  cutter.cpp  heuristic_size_cutter.cpp  index.cpp  model.cpp  optimal_size_cutter.cpp  options.cpp  problem.cpp  selection_cutter.cpp  solution.cpp  solve.cpp  test.cpp  variable_matrix.cpp
lib/src/include/index-selector-lib/: cuts.hpp  cutter.hpp  heuristic_size_cutter.hpp  immutable_array.tpp  model.hpp  optimal_size_cutter.hpp  selection_cutter.hpp  variable_matrix.hpp
